fix: client-scrollbar-gutter: stable; 적용을 html 태그 한정으로 변경

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -122,6 +122,8 @@
 @layer base {
   * {
     @apply border-border outline-ring/50;
+  }
+  html {
     scrollbar-gutter: stable;
   }
   body {
